# True-Through-Scope

./: .gitignore  CMakeLists.txt  LICENSE  vcpkg.json
backup/: ImageSpaceEffect.hlsl  ImageSpaceEffectVS.hlsl
cmake/: sourcelist.cmake
src/: BSCullingProcess.cpp  BSShaderAccumulator.txt  Constants.h  D3DHooks.cpp  D3DHooks.h  DataPersistence.cpp  DataPersistence.h  ENBDebugFlags.h  ENBIntegration.cpp  ENBIntegration.h  EventHandler.cpp  EventHandler.h  FGCompatibility.cpp  FGCompatibility.h  GlobalTypes.h  HDRStateCache.cpp  HDRStateCache.h  Hook.cpp  Hook.h  HookManager.cpp  HookManager.h  ImGuiManager.cpp  ImGuiManager.h  ImageSpaceDebugHook.cpp  ImageSpaceDebugHook.h  NiFLoader.cpp  NiFLoader.h  RenderHooks.cpp  RenderOptimization.cpp  RenderOptimization.h  RenderUtilities.cpp  RenderUtilities.h  STSCompatibility.cpp  STSCompatibility.h  ScopeCamera.cpp  ScopeCamera.h  SimpleHooks.cpp  TAAHook.cpp  ThermalVision.h  Utilities.h  (+1 more)
src/ENB/: ENBHelper.h  enbseries.h
src/HLSL/: ApplyMaskToMVCS.hlsl  BloomAccumulate_PS.hlsl  DOFBlend_PS.hlsl  GaussianBlur_PS.hlsl  ImageSpaceEffect.hlsl  LUT_PS.hlsl  LuminanceDownsample_CS.hlsl  LuminanceFinal_CS.hlsl  MirrorShader_PS.hlsl  MirrorShader_VS.hlsl  ScopeHDR_PS.hlsl  ScopeHDR_VS.hlsl  ScopeMV_PS.hlsl  ScopeMV_VS.hlsl  ThermalVision_CS.hlsl  ThermalVision_PS.hlsl  TrueScopeShader.hlsl
src/UI/: BasePanelInterface.h  ImGuiManager.cpp  ImGuiManager.h
src/UI/Localization/: LocalizationManager.cpp  LocalizationManager.h
src/UI/Panels/: CameraAdjustmentPanel.cpp  CameraAdjustmentPanel.h  DebugPanel.cpp  DebugPanel.h  ModelSwitcherPanel.cpp  ModelSwitcherPanel.h  PerformancePanel.cpp  PerformancePanel.h  PostProcessPanel.cpp  PostProcessPanel.h  ReticlePanel.cpp  ReticlePanel.h  SettingsPanel.cpp  SettingsPanel.h  ZoomDataPanel.cpp  ZoomDataPanel.h
src/rendering/: BloomPass.cpp  BloomPass.h  D3DResourceManager.cpp  D3DResourceManager.h  DOFPass.cpp  DOFPass.h  LUTPass.cpp  LUTPass.h  LightBackupSystem.cpp  LightBackupSystem.h  LuminancePass.cpp  LuminancePass.h  RenderStateManager.cpp  RenderStateManager.h  RenderTargetMerger.cpp  RenderTargetMerger.h  ScopeCulling.cpp  ScopeCulling.h  ScopeHDR.cpp  ScopeHDR.h  ScopePostProcess.cpp  ScopePostProcess.h  ScopeRenderingManager.cpp  ScopeRenderingManager.h  ScopedRenderState.h  SecondPassRenderer.cpp  SecondPassRenderer.h  TemperatureDetection.cpp  TemperatureDetection.h  ThermalVision.cpp  ThermalVisionControl.cpp  ThermalVisionControl.h
